fixed alignment & empty images before loading another path

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -2,7 +2,7 @@
 
 .item {
 	float: left;
-	width: 25%;
+	width: 24%;
 }
 
 .grid-item {
